Changelog for collective.emaillogin
===================================


0.6 (unreleased)
----------------

- Use email address instead of login/user name in some more spots,
  like the login form and in validation.  [maurits]


0.5 (2009-05-06)
----------------

- Fixed error on reinstall where the default skin would be set to the
  no longer existing emaillogin skin.  [maurits]

- Added profiles/default/metadata.xml: version = 1.  [maurits]

- After a successfull edit of the personalize form, do not travere to
  the personalize_form, but redirect to it.  This solves an error
  "Forbidden: Form authenticator is invalid." when changing your email
  address (= login name) and then saving the form a second time.
  [maurits]

- Changed validate_personalize.vpy to allow changing your preferences
  again.  [maurits]

- Adapted validate_personalize.vpy.  Change compared to default Plone:
  check the validity of the email address as a login name.  [maurits]

- Added i18n.  [maurits]


0.4 (2009-05-05)
----------------

- Also show the error when the email address is not a valid username.
  [maurits+mike]


0.3 (2009-05-05)
----------------

- Removed personalize_form.cpt(.metadata) as there was no important
  difference with the one from default Plone.  [maurits+mike]

- Take over a small change in default Plone to the personalize.cpy.

- Fixed join form to also work in newer Plones by using the
  @@authenticator provider for protecting this join form.  Keeps
  working in Plone 3.0 as well (which does not use plone.protect).
  [maurits+mike]


0.2 (2009-05-05)
----------------

- No longer register our own skin path (skin selection), but just add
  our emaillogin skin layer to the existing skin selections.
  [maurits+mike]


0.1 (2008-01-15)
----------------

- Initial release.
  [maurits, guido]
